--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -6,7 +6,7 @@ $accent2: #ffcc00
 $text: #252525
 $arrow: #9D9E9D
 $text-gray: #898989
-$accent-line: #e5e5e5
+$accent-line: #E4E9F6
 $spacing: .19em
 $trans3: all 0.3s ease
 $trans2: all .25s ease
