--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -23,12 +23,12 @@
 @include font('Roboto', normal, 700, '../fonts/roboto-bold-webfont.woff2')
 @include font('Roboto', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
 
-@include font('Opensans', normal, 400, '../fonts/opensansregular-webfont.woff2')
-@include font('Opensans', italic, 400, '../fonts/opensansitalic-webfont.woff2')
-@include font('Opensans', normal, 700, '../fonts/opensansbold-webfont.woff2')
-@include font('Opensans', italic, 700, '../fonts/opensansbolditalic-webfont.woff2')
+@include font('Opensans', normal, 400, '../fonts/OpenSansRegular.ttf')
+@include font('Opensans', italic, 400, '../fonts/OpenSansItalic.ttf')
+@include font('Opensans', normal, 700, '../fonts/OpenSansBold.ttf')
+@include font('Opensans', italic, 700, '../fonts/OpenSansBoldItalic.ttf')
 
-@include font('GothamPro', normal, 400, '../fonts/GothamPro.woff2')
-@include font('GothamPro', normal, 700, '../fonts/GothamPro-Bold.woff2')
-@include font('GothamPro', normal, 800, '../fonts/GothamPro-Black.woff2')
+@include font('GothamPro', normal, 400, '../fonts/GothamProRegular.ttf')
+@include font('GothamPro', normal, 700, '../fonts/GothamProBold.ttf')
+@include font('GothamPro', normal, 800, '../fonts/GothamProBlack.ttf')
 
