--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -37,11 +37,14 @@ h1,.h1
 	font-size: 3.125em
 	font-weight: 800
 	text-transform: uppercase
+	+media-breakpoint-down(xl)
+		font-size: 2.125em
 
 h2,.h2
 	font-size: 2.25em
 	margin-bottom: 1em
-
+	+media-breakpoint-down(lg)
+		font-size: 1.9em
 h4,.h4
 	font-size: 1.5em
 
@@ -203,6 +206,14 @@ p
 			margin-left: -15px
 	.address
 		width: 20%
+	+media-breakpoint-down(lg)
+		.logo
+			width: 22%
+		.contact
+			width: 26%
+		.address
+			width: 16%
+
 .top-line
 	font-style: italic
 	line-height: 1.15
@@ -241,6 +252,8 @@ p
 	bottom: 50px
 	display: flex
 	z-index: 10
+	+media-breakpoint-down(lg)
+		bottom: 70px
 .icon-circle
 	border-radius: 100%
 	background: #399BE0
@@ -293,6 +306,8 @@ p
 		font-size: .9375em
 		&:not(:last-child)
 			margin-right: 20px
+			+media-breakpoint-down(lg)
+				margin-right: 15px
 		&.active
 			>a
 				color: $text
@@ -304,6 +319,9 @@ p
 					position: absolute
 					bottom: 0
 					left: 0
+		+media-breakpoint-down(lg)
+			font-size: .8em
+
 	a
 		display: inline-block
 		vertical-align: middle
@@ -361,7 +379,7 @@ p
 //SLIDER//
 .main-slider
 	position: relative
-	margin-bottom: 120px
+	margin-bottom: 70px
 	.item
 		position: relative
 	.item-content
@@ -370,7 +388,7 @@ p
 		height: 100%
 		left: 0
 		top: 0
-		padding-top: 135px
+		padding-top: 6%
 		.btn-lg
 			padding: 25px 30px
 			min-width: 360px
@@ -393,6 +411,8 @@ p
 			box-shadow: 0 6px 24px rgba(#c5c5c5, .27)
 			border-radius: 5px
 			padding: 20px
+		+media-breakpoint-down(lg)
+			margin-bottom: -100px
 .spec-icon
 	width: 60px
 	margin: 0 auto 18px
@@ -403,7 +423,8 @@ p
 .advantages
 	margin-bottom: 40px
 	.item
-		width: 180px
+		min-width: 160px
+		max-width: 200px
 		text-align: center
 		&:nth-child(2)
 			.spec-icon
@@ -425,6 +446,31 @@ p
 		font-size: 1.125em
 		font-style: italic
 		line-height: 1.2
+	&.door
+		margin-bottom: 0
+		.spec-icon
+			width: 73px
+			height: 72px
+			background-image: url(../img/door_icon-sprite.png)
+		.item
+			&:nth-child(1)
+				.spec-icon
+					background-position: 9px 0
+			&:nth-child(2)
+				.spec-icon
+					background-position: -73px 0
+			&:nth-child(4)
+				.spec-icon
+					background-position: -233px 0
+			&:nth-child(5)
+				.spec-icon
+					background-position: -312px 0
+			&:nth-child(6)
+				.spec-icon
+					background-position: -400px 0
+			&:nth-child(even)
+				margin-top: 120px
+			
 //CONTENT//
 .content-wrapper
 	padding-top: 54px
@@ -450,16 +496,22 @@ p
 	background-repeat: no-repeat
 	background-size: auto 92%
 	background-position: right 70% center
+	p:last-of-type
+		margin-bottom: 40px
 	&.visible
 		//background-image: url(../img/production_bg.png)
 	.grid
 		>div
 			grid-column-start: 2
 			padding: 26px 0
+	&.left
+		background-position: left 70% center
+		.grid
+			>div
+				grid-column-start: 1
 	li
 		max-width: 150px
 		line-height: 1.2
-		padding-top: 30px
 		padding-bottom: 30px
 		&:nth-child(2)
 			.spec-icon
@@ -509,7 +561,7 @@ p
 		background: #fff
 		transition: $trans3
 	.owl-item
-		padding: 16px 0 24px
+		padding: 16px 20px 24px
 		&.center
 			.item
 				box-shadow: 0 6px 24px rgba(#c5c5c5, .27)
@@ -530,6 +582,9 @@ p
 		.h5,h5
 			min-height: 3.5em
 	.owl-carousel
+		+media-breakpoint-down(xl)
+			max-width: 1140px
+			margin: 0 auto
 		.owl-nav
 			position: absolute
 			width: 50%
@@ -538,6 +593,10 @@ p
 			+transform(-50%, -50%)
 			display: flex
 			justify-content: space-between
+			&.disabled
+				display: none	
+			+media-breakpoint-down(xl)
+				width: 105%
 			button
 				width: 80px
 				height: 80px
@@ -646,6 +705,9 @@ p
 			width: 100%
 			opacity: 0
 			transition: $trans3
+			+media-breakpoint-down(lg)
+				position: relative
+				opacity: 1
 		.btn
 			font-size: .875em
 
@@ -766,7 +828,8 @@ p
 					text-decoration: underline
 				&:before
 					background-position: -60px 0
-
+		+media-breakpoint-down(lg)
+			margin-left: -420px
 	#map-canvas
 		min-height: 100%
 
